force-app/main/default/objects/Result__c/Result__c.object-meta.xml
<CustomObject>
    <label>Result</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Result Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>