force-app/main/default/objects/Result__c/fields/Anti_Mullerian_Hormone__c.field-meta.xml
<CustomField>
    <fullName>Anti_Mullerian_Hormone__c</fullName>
    <label>Anti Mullerian Hormone (AMH)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>