force-app/main/default/objects/Result__c/fields/Collected__c.field-meta.xml
<CustomField>
    <fullName>Collected__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>Collected</label>
    <type>DateTime</type>
</CustomField>