force-app/main/default/objects/Result__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Long Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>