force-app/main/default/objects/Result__c/fields/Consolidated_Date__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Date__c</fullName>
    <formula>IF(ISNULL(Cycle__r.Day_1__c), Day_of_Result__c, Day_of_Result__c &amp; &quot;, &quot; &amp; Day_of_Week__c &amp; &quot;, &quot; &amp;
TEXT(DAY(Date_Collected_Only__c)) &amp; &quot;/&quot; &amp;
TEXT(MONTH(Date_Collected_Only__c)) &amp; &quot;/&quot; &amp;
TEXT(YEAR(Date_Collected_Only__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consolidated Date</label>
    <type>Text</type>
</CustomField>