force-app/main/default/objects/Result__c/fields/Cycle__c.field-meta.xml
<CustomField>
    <fullName>Cycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cycle</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Result</relationshipLabel>
    <relationshipName>Result</relationshipName>
    <type>Lookup</type>
</CustomField>