force-app/main/default/objects/Result__c/fields/Date_Collected_Only__c.field-meta.xml
<CustomField>
    <fullName>Date_Collected_Only__c</fullName>
    <formula>DATEVALUE(Collected__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Collected Only</label>
    <type>Date</type>
</CustomField>