force-app/main/default/objects/Result__c/fields/Day_of_Result__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Result__c</fullName>
    <formula>IF( Day_of_Result_Number__c &gt;0,&quot;Day &quot;&amp;TEXT(Day_of_Result_Number__c) , &quot;Prior to Day 1&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of Result</label>
    <type>Text</type>
</CustomField>