force-app/main/default/objects/Result__c/fields/Day_of_Result_Number__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Result_Number__c</fullName>
    <formula>Date_Collected_Only__c - Cycle__r.Day_1__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of Result Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>