force-app/main/default/objects/Result__c/fields/Doctor_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Mobile__c</fullName>
    <formula>Cycle__r.Doctor_Initiating_Cycle__r.Mobile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doctor Mobile</label>
    <type>Text</type>
</CustomField>