force-app/main/default/objects/Result__c/fields/Doctor_s_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Doctor_s_Mobile__c</fullName>
    <formula>Patients_or_Donors__r.Account.Doctor2__r.Mobile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doctor&apos;s Mobile</label>
    <type>Text</type>
</CustomField>