force-app/main/default/objects/Result__c/fields/Doctors_Comments__c.field-meta.xml
<CustomField>
    <fullName>Doctors_Comments__c</fullName>
    <label>Doctors Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>