force-app/main/default/objects/Result__c/fields/E2__c.field-meta.xml
<CustomField>
    <fullName>E2__c</fullName>
    <label>E2</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>