force-app/main/default/objects/Result__c/fields/Egg_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Egg_Cohort__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Egg Cohort</label>
    <referenceTo>Egg_Sample__c</referenceTo>
    <relationshipLabel>Result</relationshipLabel>
    <relationshipName>Result</relationshipName>
    <type>Lookup</type>
</CustomField>