force-app/main/default/objects/Result__c/fields/Embryo__c.field-meta.xml
<CustomField>
    <fullName>Embryo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Embryo</label>
    <referenceTo>Embryo__c</referenceTo>
    <relationshipLabel>Result</relationshipLabel>
    <relationshipName>Result</relationshipName>
    <type>Lookup</type>
</CustomField>