force-app/main/default/objects/Result__c/fields/Endometrium_Thickness__c.field-meta.xml
<CustomField>
    <fullName>Endometrium_Thickness__c</fullName>
    <label>Endometrium Thickness</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>