force-app/main/default/objects/Result__c/fields/Endometrium_Type__c.field-meta.xml
<CustomField>
    <fullName>Endometrium_Type__c</fullName>
    <label>Endometrium Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proliferative</fullName>
            </value>
            <value>
                <fullName>Secretory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>