force-app/main/default/objects/Result__c/fields/ERPeak_Type__c.field-meta.xml
<CustomField>
    <fullName>ERPeak_Type__c</fullName>
    <label>ERPeak Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Receptive Day 5</fullName>
            </value>
            <value>
                <fullName>Non-Receptive Day 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>