force-app/main/default/objects/Result__c/fields/Follicles_Left_Ovary_2__c.field-meta.xml
<CustomField>
    <fullName>Follicles_Left_Ovary_2__c</fullName>
    <label>Follicles - Left Ovary 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>