force-app/main/default/objects/Result__c/fields/Follicles_Right_Ovary_1__c.field-meta.xml
<CustomField>
    <fullName>Follicles_Right_Ovary_1__c</fullName>
    <label>Follicles - Right Ovary 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>