force-app/main/default/objects/Result__c/fields/Format_for_Positive_Pregnancy__c.field-meta.xml
<CustomField>
    <fullName>Format_for_Positive_Pregnancy__c</fullName>
    <formula>IF( Pat_is_Pregnant__c =&quot;No Result&quot;, &quot;&quot;,
IF( Pat_is_Pregnant__c =&quot;Y&quot;, &quot;slds-theme_success&quot;,
IF( Pat_is_Pregnant__c =&quot;N&quot;, &quot;slds-theme_error&quot;,&quot;&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Format for Positive Pregnancy</label>
    <type>Text</type>
</CustomField>