force-app/main/default/objects/Result__c/fields/HEP_C__c.field-meta.xml
<CustomField>
    <fullName>HEP_C__c</fullName>
    <label>HEP C</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Detected</fullName>
            </value>
            <value>
                <fullName>Detected POS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>