force-app/main/default/objects/Result__c/fields/Left_Follicle_Summary__c.field-meta.xml
<CustomField>
    <fullName>Left_Follicle_Summary__c</fullName>
    <label>Left Follicle Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>