force-app/main/default/objects/Result__c/fields/Left_Ovary_Average_2__c.field-meta.xml
<CustomField>
    <fullName>Left_Ovary_Average_2__c</fullName>
    <label>Left Ovary - Average 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>