force-app/main/default/objects/Result__c/fields/LH__c.field-meta.xml
<CustomField>
    <fullName>LH__c</fullName>
    <description>LH Blood Results Field</description>
    <label>LH</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>