force-app/main/default/objects/Result__c/fields/Medications__c.field-meta.xml
<CustomField>
    <fullName>Medications__c</fullName>
    <description>Medications that are valid on the day of the result</description>
    <label>Medications</label>
    <length>255</length>
    <type>Text</type>
</CustomField>