force-app/main/default/objects/Result__c/fields/Number_of_Follicles_Left__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Follicles_Left__c</fullName>
    <label>Number of Follicles Over 11mm Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>