force-app/main/default/objects/Result__c/fields/Number_of_Follicles_Over_11mm_Right__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Follicles_Over_11mm_Right__c</fullName>
    <label>Number of Follicles Over 11mm Right</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>