force-app/main/default/objects/Result__c/fields/Number_of_Heart_Beats__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Heart_Beats__c</fullName>
    <label>Number of Heart Beats</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>