force-app/main/default/objects/Result__c/fields/Observations__c.field-meta.xml
<CustomField>
    <fullName>Observations__c</fullName>
    <label>Observations</label>
    <length>155</length>
    <type>Text</type>
</CustomField>