force-app/main/default/objects/Result__c/fields/Ovulated__c.field-meta.xml
<CustomField>
    <fullName>Ovulated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ovulated</label>
    <type>Checkbox</type>
</CustomField>