force-app/main/default/objects/Result__c/fields/P4__c.field-meta.xml
<CustomField>
    <fullName>P4__c</fullName>
    <label>P4</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>