force-app/main/default/objects/Result__c/fields/Pat_is_Pregnant__c.field-meta.xml
<CustomField>
    <fullName>Pat_is_Pregnant__c</fullName>
    <formula>IF(ISBLANK(HCG__c), &quot;No Result&quot;, IF(HCG__c &gt; 5, &quot;Y&quot;, &quot;N&quot;))</formula>
    <label>Pat is Pregnant</label>
    <type>Text</type>
</CustomField>