force-app/main/default/objects/Result__c/fields/Patients_or_Donors__c.field-meta.xml
<CustomField>
    <fullName>Patients_or_Donors__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patients or Donors</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Result</relationshipLabel>
    <relationshipName>Result</relationshipName>
    <type>Lookup</type>
</CustomField>