force-app/main/default/objects/Result__c/fields/PGT__c.field-meta.xml
<CustomField>
    <fullName>PGT__c</fullName>
    <label>PGT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NAD</fullName>
            </value>
            <value>
                <fullName>Aneuploid</fullName>
            </value>
            <value>
                <fullName>Mosaic</fullName>
            </value>
            <value>
                <fullName>Inconclusive</fullName>
            </value>
            <value>
                <fullName>No Result</fullName>
            </value>
            <value>
                <fullName>Low Risk (Carrier)</fullName>
            </value>
            <value>
                <fullName>Low Risk (Unaffected)</fullName>
            </value>
            <value>
                <fullName>High Risk (Affected)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>