force-app/main/default/objects/Result__c/fields/Related_Cycle_Day_Event__c.field-meta.xml
<CustomField>
    <fullName>Related_Cycle_Day_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Cycle Day Event</label>
    <referenceTo>Cycle_Day_Events__c</referenceTo>
    <relationshipLabel>Results</relationshipLabel>
    <relationshipName>Results</relationshipName>
    <type>Lookup</type>
</CustomField>