force-app/main/default/objects/Result__c/fields/Result_Description__c.field-meta.xml
<CustomField>
    <fullName>Result_Description__c</fullName>
    <label>Result Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>