force-app/main/default/objects/Result__c/fields/Result_Type__c.field-meta.xml
<CustomField>
    <fullName>Result_Type__c</fullName>
    <label>Result Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blood Test Result</fullName>
                <default>true</default>
                <label>Blood Test Result</label>
            </value>
            <value>
                <fullName>Pregnancy Test Result</fullName>
            </value>
            <value>
                <fullName>Where in Cycle Blood</fullName>
            </value>
            <value>
                <fullName>Infectious Screens</fullName>
            </value>
            <value>
                <fullName>Scan</fullName>
            </value>
            <value>
                <fullName>Pregnancy Scan</fullName>
            </value>
            <value>
                <fullName>Record Ovulation</fullName>
            </value>
            <value>
                <fullName>Pregnancy Histopathology</fullName>
            </value>
            <value>
                <fullName>Antral Follicle Count</fullName>
            </value>
            <value>
                <fullName>Anti Mullerian Hormone</fullName>
            </value>
            <value>
                <fullName>PGT Result</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>