force-app/main/default/objects/Result__c/fields/Right_Follicle_Summary__c.field-meta.xml
<CustomField>
    <fullName>Right_Follicle_Summary__c</fullName>
    <label>Right Follicle Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>