force-app/main/default/objects/Result__c/fields/Rubella__c.field-meta.xml
<CustomField>
    <fullName>Rubella__c</fullName>
    <label>Rubella</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>