force-app/main/default/objects/Result__c/fields/Rubella_Type__c.field-meta.xml
<CustomField>
    <fullName>Rubella_Type__c</fullName>
    <label>Rubella Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immune</fullName>
            </value>
            <value>
                <fullName>Not Immune</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>