force-app/main/default/objects/Result__c/fields/Semen_Sample__c.field-meta.xml
<CustomField>
    <fullName>Semen_Sample__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Semen Sample</label>
    <referenceTo>Sperm_Sample__c</referenceTo>
    <relationshipLabel>Result</relationshipLabel>
    <relationshipName>Result</relationshipName>
    <type>Lookup</type>
</CustomField>