force-app/main/default/objects/Result__c/fields/Sonographer__c.field-meta.xml
<CustomField>
    <fullName>Sonographer__c</fullName>
    <label>Sonographer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Karen</fullName>
            </value>
            <value>
                <fullName>Lori</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>