force-app/main/default/objects/Result__c/fields/Sonographer_Observations__c.field-meta.xml
<CustomField>
    <fullName>Sonographer_Observations__c</fullName>
    <label>Sonographer Observations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>