force-app/main/default/objects/Result__c/fields/System_Generated_Result__c.field-meta.xml
<CustomField>
    <fullName>System_Generated_Result__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Generated Result</label>
    <type>Checkbox</type>
</CustomField>