force-app/main/default/objects/Result__c/fields/Total_Follicles_Left__c.field-meta.xml
<CustomField>
    <fullName>Total_Follicles_Left__c</fullName>
    <label>Total Follicles Left</label>
    <summaryFilterItems>
        <field>Follicle_Measurement__c.Side__c</field>
        <operation>equals</operation>
        <value>Left</value>
    </summaryFilterItems>
    <summaryForeignKey>Follicle_Measurement__c.Result__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>