force-app/main/default/objects/Result__c/fields/Total_Follicles_Right__c.field-meta.xml
<CustomField>
    <fullName>Total_Follicles_Right__c</fullName>
    <label>Total Follicles Right</label>
    <summaryFilterItems>
        <field>Follicle_Measurement__c.Side__c</field>
        <operation>equals</operation>
        <value>Right</value>
    </summaryFilterItems>
    <summaryForeignKey>Follicle_Measurement__c.Result__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>