force-app/main/default/objects/Result__c/fields/Uterus__c.field-meta.xml
<CustomField>
    <fullName>Uterus__c</fullName>
    <label>Uterus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anteverted</fullName>
            </value>
            <value>
                <fullName>Retroverted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>