force-app/main/default/objects/Result__c/recordTypes/PGT_Result.recordType-meta.xml
<RecordType>
    <fullName>PGT_Result</fullName>
    <active>true</active>
    <label>PGT Result</label>
</RecordType>