force-app/main/default/objects/Result__c/recordTypes/Staff_Created_Results.recordType-meta.xml
<RecordType>
    <fullName>Staff_Created_Results</fullName>
    <active>true</active>
    <label>Staff Created Results</label>
</RecordType>