force-app/main/default/objects/Result__c/recordTypes/System_Generated_Results.recordType-meta.xml
<RecordType>
    <fullName>System_Generated_Results</fullName>
    <active>true</active>
    <label>System Generated Results</label>
</RecordType>