force-app/main/default/objects/Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patients_or_Donors__c</columns>
    <columns>Result_Type__c</columns>
    <columns>Result_Description__c</columns>
    <columns>Collected__c</columns>
    <columns>Cycle__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>