force-app/main/default/objects/Result__c/listViews/allSelection_Result.listView-meta.xml
<ListView>
    <fullName>allSelection_Result</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>