force-app/main/default/objects/Result__c/listViews/Laboratory_Result.listView-meta.xml
<ListView>
    <fullName>Laboratory_Result</fullName>
    <filterScope>Queue</filterScope>
    <label>Laboratory</label>
    <queue>Laboratory</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>