force-app/main/default/objects/Result__c/listViews/Nursing_Result.listView-meta.xml
<ListView>
    <fullName>Nursing_Result</fullName>
    <filterScope>Queue</filterScope>
    <label>Nursing</label>
    <queue>Nursing</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>